navbar grid css. delete odd styles.css found in root directory

--- a/test-run/index.html
+++ b/test-run/index.html
@@ -8,7 +8,14 @@
     <title>Janus Face Home</title>
 </head>
 <body>
-    <nav>Home Contact Login</nav>
+    <nav>
+        <ul>
+            <span class="open"></span>
+            <li class="nav-item menu1" >menu item 1</li>
+            <li class="nav-item menu2" >menu item 2</li>
+            <li class="nav-item menu3" >menu item 3</li>
+        </ul>
+    </nav>
     <div class="container">
        <h1>Google <small>Home Page Test Run</small></h1>
         <div class="row">
