--- a/test-run/index.html
+++ b/test-run/index.html
@@ -17,7 +17,7 @@
         </ul>
     </nav>
     <div class="container">
-       <h1>Google <small>Home Page Test Run</small></h1>
+       <h1><img src="images/google-logo.png" alt=""> <small>Home Page Test Run</small></h1>
         <div class="row">
             <div class="col-8">Main</div>
             <div class="col-4">Side</div>
