--- a/test-run/index.html
+++ b/test-run/index.html
@@ -10,10 +10,16 @@
 <body>
     <nav>
         <ul>
-            <span class="open"></span>
-            <li class="nav-item menu1" >menu item 1</li>
-            <li class="nav-item menu2" >menu item 2</li>
-            <li class="nav-item menu3" >menu item 3</li>
+            <span class="open"><a class="nav-link" href="#">About</a> <a class="nav-link" href="#">Store</a></span>
+            <li class="nav-item menu1" >
+                <a class="nav-link" href="#">menu item 1</a>
+            </li>
+            <li class="nav-item menu2" >
+                <a class="nav-link" href="#">menu item 2</a>
+            </li>
+            <li class="nav-item menu3" >
+                <a class="nav-link" href="#s">menu item 3</a>
+            </li>
         </ul>
     </nav>
     <div class="container">
