search form in test-run

--- a/test-run/index.html
+++ b/test-run/index.html
@@ -22,10 +22,19 @@
             </li>
         </ul>
     </nav>
-    <div class="container">
+    <div class="wrapper">
        <h1><img src="images/google-logo.png" alt=""> <small>Home Page Test Run</small></h1>
-        <div class="row">
-            <div class="col-8">Main</div>
+        <div class="container">
+                <div class="row">
+        </div>
+            <div class="col-8">
+                <div class="form">
+                    <form action="" method="POST">
+                        <div class="form-item"><input type="text" placeholder="search">
+                        </div>
+                    </form>
+                </div>
+            </div>
             <div class="col-4">Side</div>
         </div>
     </div>
