load index with search form

--- a/test-run/index.html
+++ b/test-run/index.html
@@ -30,7 +30,7 @@
             <div class="col-8">
                 <div class="form">
                     <form action="" method="POST">
-                        <div class="form-item"><input type="text" placeholder="search">
+                        <div class="form-item"><input type="text" placeholder="searchs">
                         </div>
                     </form>
                 </div>
