--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Google Clone Home</title>
 </head>
 <body>
@@ -11,17 +12,19 @@
         <nav class="navbar">
             <ul class="nav-container">
                 <li class="nav-item">
-                    <a href="" class="nav-link">Link 1</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Link 2</a>
+        <a href="" class="nav-link">Link 1</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Link 3</a>
+        <a href="" class="nav-link">Link 2</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Link 4</a>
+        <a href="" class="nav-link">Link 3</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Link 5</a>
+        <a href="" class="nav-link">Link 4</a>
+                </li>
+                <li class="nav-item">
+        <a href="" class="nav-link">Link 5</a>
                 </li>
             </ul>
         </nav>
