--- a/test-run/index.html
+++ b/test-run/index.html
@@ -9,16 +9,24 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <span class="open"><a class="nav-link" href="#">About</a> <a class="nav-link" href="#">Store</a></span>
+        <ul class="nav-item left">
+            <li class="about"> 
+        <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item store">
+        <a class="nav-link" href="#">Store</a>
+            </li>
+            </ul>
+        <ul class="right">
+            
             <li class="nav-item menu1" >
-                <a class="nav-link" href="#">menu item 1</a>
+    <a class="nav-link" href="#">menu item 1</a>
             </li>
             <li class="nav-item menu2" >
-                <a class="nav-link" href="#">menu item 2</a>
+    <a class="nav-link" href="#">menu item 2</a>
             </li>
             <li class="nav-item menu3" >
-                <a class="nav-link" href="#s">menu item 3</a>
+    <a class="nav-link" href="#s">menu item 3</a>
             </li>
         </ul>
     </nav>
