--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         </nav>
         <div class="container">
            <h1><img src="images/google-logo.png" alt=""> <small>Home Page Test Run</small></h1>
+           <h2>Google Clone Home</h2>
+           <img src="images/ET-Phone-Home.jpg" alt="ET-Phone-Home" width="100">
         </div>
     </body>
     </html>
