--- a/test-run/index.html
+++ b/test-run/index.html
@@ -31,11 +31,9 @@
         </ul>
     </nav>
     <div class="container">
-       <h1><img src="images/google-logo.png" alt=""> <small>Home Page Test Run</small></h1>
-        <div class="row">
-            <div class="col-8">Main</div>
-            <div class="col-4">Side</div>
-        </div>
+        <span class="open"></span>
+        <img class="g-logo" src="images/google-logo.png" alt=""> 
+        <span class="end"></span>
     </div>
 </body>
 </html>
