create form and footer modify html and css for same. next step work element alignments using grid or flex or old school css.

--- a/test-run/index.html
+++ b/test-run/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Janus Face Home</title>
+    <title>Goohgul Home page</title>
 </head>
 <body>
     <nav>
@@ -34,6 +34,20 @@
         <span class="open"></span>
         <img class="g-logo" src="images/google-logo.png" alt=""> 
         <span class="end"></span>
+        <div class="form">
+            <form action="" class="search-bar">
+                <input type="text bar" placeholder="Search">
+                <span class="search f-ticon">fonticon here</span>
+                <button class="btn button">Search</button>
+            </form>
+        </div>
+        <div class="footer">
+            <ul class="ft-cont">
+                <li class="ft-item">Item 1<a href="" class="ft-nav">Nav 1</a></li>
+                <li class="ft-item">Item 2<a href="" class="ft-nav">Nav 2</a></li>
+                <li class="ft-item">Item 3<a href="" class="ft-nav">Nav 3</a></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
