modify css create flex container various css test

--- a/test-run/index.html
+++ b/test-run/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
+    <link rel="stylesheet" href="css/flex.css">
     <title>Goohgul Home page</title>
 </head>
 <body>
+    <div class="container">
     <nav>
-        <ul class="nav-item left">
-            <li class="about"> 
+        <ul class="left">
+            <li class="nav-item about"> 
         <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item store">
@@ -30,9 +32,8 @@
             </li>
         </ul>
     </nav>
-    <div class="container">
         <span class="open"></span>
-        <img class="g-logo" src="images/google-logo.png" alt=""> 
+        <img class="g-logo" src="images/google-logo.png" alt="The Google Multi Colored Logo"> 
         <span class="end"></span>
         <div class="form">
             <form action="" class="search-bar">
