modify flex.css add font awesome  and bootstrap cdn

--- a/test-run/index.html
+++ b/test-run/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <link rel="stylesheet" href="css/styles.css"> -->
     <link rel="stylesheet" href="css/flex.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/e404aa13c6.js"></script>
+
     <title>Goohgul Home page</title>
 </head>
 <body>
@@ -31,22 +34,22 @@
     <a class="nav-link" href="#s">menu item 3</a>
             </li>
         </ul>
-    </nav>
-        <span class="open"></span>
-        <img class="g-logo" src="images/google-logo.png" alt="The Google Multi Colored Logo"> 
-        <span class="end"></span>
+    </nav> 
         <div class="form">
+        <div class="main">
+                <img class="g-logo" width="175" src="images/google-logo.png" alt="The Google Multi Colored Logo">
             <form action="" class="search-bar">
                 <input type="text bar" placeholder="Search">
-                <span class="search f-ticon">fonticon here</span>
-                <button class="btn button">Search</button>
+                <span style="color: lightblue;" class="fas fa-search"></span>
+                <button class="btn btn-info">Search</button>
             </form>
         </div>
+    </div>
         <div class="footer">
             <ul class="ft-cont">
-                <li class="ft-item">Item 1<a href="" class="ft-nav">Nav 1</a></li>
-                <li class="ft-item">Item 2<a href="" class="ft-nav">Nav 2</a></li>
-                <li class="ft-item">Item 3<a href="" class="ft-nav">Nav 3</a></li>
+                <li class="ft-item"><a href="" class="ft-nav">Nav 1</a></li>
+                <li class="ft-item"><a href="" class="ft-nav">Nav 2</a></li>
+                <li class="ft-item"><a href="" class="ft-nav">Nav 3</a></li>
             </ul>
         </div>
     </div>
