save file to see acurate results. css mod to center main is a success

--- a/test-run/index.html
+++ b/test-run/index.html
@@ -36,12 +36,14 @@
         </ul>
     </nav> 
         <div class="form">
+        <div class="main">
                 <img class="g-logo" width="175" src="images/google-logo.png" alt="The Google Multi Colored Logo">
             <form action="" class="search-bar">
                 <input type="text bar" placeholder="Search">
-                <span style="color: lightblue;" class="fas fa-search"></span>
+                <span style="color: rgb(83, 175, 206);" class="fas fa-search"></span>
                 <button class="btn btn-info">Search</button>
             </form>
+        </div>
     </div>
         <div class="footer">
             <ul class="ft-cont">
