set search field background image| over write css from bootstrap effecting the anchor tag style | create and resize input image | establish footer initial structure

--- a/test-run/index.html
+++ b/test-run/index.html
@@ -13,45 +13,52 @@
 </head>
 <body>
     <div class="container">
-    <nav>
-        <ul class="left">
-            <li class="nav-item about"> 
-        <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item store">
-        <a class="nav-link" href="#">Store</a>
-            </li>
+        <nav>
+            <ul class="left">
+                <li class="nav-item about"> 
+            <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item store">
+            <a class="nav-link" href="#">Store</a>
+                </li>
+                </ul>
+            <ul class="right">
+                
+                <li class="nav-item menu1" >
+        <a class="nav-link" href="#">gMail</a>
+                </li>
+                <li class="nav-item menu2" >
+        <a class="nav-link" href="#">images</a>
+                </li>
+                <li class="nav-item menu3" >
+        <a class="nav-link" href="#s">Apps</a>
+                </li>
             </ul>
-        <ul class="right">
-            
-            <li class="nav-item menu1" >
-    <a class="nav-link" href="#">menu item 1</a>
-            </li>
-            <li class="nav-item menu2" >
-    <a class="nav-link" href="#">menu item 2</a>
-            </li>
-            <li class="nav-item menu3" >
-    <a class="nav-link" href="#s">menu item 3</a>
-            </li>
-        </ul>
-    </nav> 
-        <div class="form">
-        <div class="main">
-                <img class="g-logo" width="175" src="images/google-logo.png" alt="The Google Multi Colored Logo">
-            <form action="" class="search-bar">
-                <input type="text bar" placeholder="Search">
-                <span style="color: rgb(83, 175, 206);" class="fas fa-search"></span>
-                <button class="btn btn-info">Search</button>
-            </form>
-        </div>
-    </div>
+        </nav> 
+        <div class="form-container">
+            <div class="main">
+                    <img class="g-logo" width="175" src="images/google-logo.png" alt="The Google Multi Colored Logo">
+                <form action="" class="search-bar">
+                    <input type="search" results="0">
+                    <br>
+                    <!-- <span style="color: rgb(83, 175, 206);" class="fas fa-search"></span> -->
+                    <button class="btn btn-secondary">Google Search</button>
+                    <button class="btn btn-secondary">No Tracking</button>
+                </form>
+            </div> <!-- main -->
+        </div> <!-- form-container class-->
         <div class="footer">
-            <ul class="ft-cont">
+            <ul class="ft-cont ft-left">
                 <li class="ft-item"><a href="" class="ft-nav">Nav 1</a></li>
                 <li class="ft-item"><a href="" class="ft-nav">Nav 2</a></li>
                 <li class="ft-item"><a href="" class="ft-nav">Nav 3</a></li>
             </ul>
-        </div>
-    </div>
+            <ul class="ft-cont ft-right">
+                <li class="ft-item"><a href="" class="ft-nav">Nav 1</a></li>
+                <li class="ft-item"><a href="" class="ft-nav">Nav 2</a></li>
+                <li class="ft-item"><a href="" class="ft-nav">Nav 3</a></li>
+            </ul>
+        </div> <!-- Footer -->
+    </div> <!-- container  -->
 </body>
 </html>
