another image reduction | tip added to buttons | minor css position changes move g-logo img the search bar and the buttons together

--- a/test-run/index.html
+++ b/test-run/index.html
@@ -37,13 +37,13 @@
         </nav> 
         <div class="form-container">
             <div class="main">
-                    <img class="g-logo" width="175" src="images/google-logo.png" alt="The Google Multi Colored Logo">
+                    <img class="g-logo" width="225" src="images/google-logo.png" alt="The Google Multi Colored Logo">
                 <form action="" class="search-bar">
                     <input type="search" results="0">
                     <br>
                     <!-- <span style="color: rgb(83, 175, 206);" class="fas fa-search"></span> -->
-                    <button class="btn btn-secondary">Google Search</button>
-                    <button class="btn btn-secondary">No Tracking</button>
+                    <button title="ShareResultsWithWorldGovernments" class="btn btn-secondary">Google Search</button>
+                    <button title="GoTo DuckDuckGo" class="btn btn-secondary">Feeling Like not being Tracked</button>
                 </form>
             </div> <!-- main -->
         </div> <!-- form-container class-->
